2020-12-16  Dirk Eddelbuettel  <edd@debian.org>

	* inst/NEWS.Rd: Updated for recent activity

	* .github/workflows/ci.yaml: Add container-based CI runner
	* README.md: Add new badge

2020-11-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: More URL updates, e.g. http -> https
	* README.md: Ditto
	* inst/CITATION: Ditto
	* man/Rcpp-package.Rd: Ditto

	* inst/CITATION: Change from PeerJ Preprint to TAS

2020-10-25  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

	* inst/include/Rcpp/generated/InternalFunction__ctors.h: Switch XPtr
	finalizer argument from false to true

2020-10-22  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/lang.h: Remove spurious whitespace

	* vignettes/.gitignore: Refined to no longer ignore pdf files
	* vignettes/pdf/*: Added

	* inst/NEWS.Rd: Updated for two PRs

2020-10-21  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

2020-10-19  Benjamin Christoffersen  <boennecd@gmail.com>

	* src/attributes.cpp: Initialize two private bool variable in default
	constructor to avoid santizer warning

2020-08-20  Mattias Ellert  <mattias.ellert@physics.uu.se>

        * inst/include/Rcpp/lang.h: Remove obsolete and confusing comment

2020-08-05  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

2020-07-09  Walter Somerville  <waltersom@gmail.com>

	* inst/include/Rcpp/DataFrame.h: Warn when data.frame has varying
	length
	* inst/tinyTest/cpp/DataFrame.cpp: Test added
	* inst/tinyTest/test_dataframe.R: Idem

2020-07-07  Walter Somerville  <waltersom@gmail.com>

	* inst/include/Rcpp/DataFrame.h: Implement explict push_back and
	push_front for DataFrame, which takes care to set the class and
	row.names attributes.
	* inst/tinyTest/test_dataframe.R: Add in tests for